--- a/overmij.html
+++ b/overmij.html
@@ -21,6 +21,7 @@
                     <li><a class="active" href="overmij.html">Ik als Esporter! </a></li>
                     <li><a href="info.html">Extra Informatie</a></li>
                     <li><a href="team.html">Mijn Team </a></li>
+                    <li><a href ="spelers.html"> Bekende Esporters</a></li>
                 </ul>
             </nav>
             
@@ -34,8 +35,8 @@
             <footer>
                 <hr/>
                 <br>
-                <p>info@emmauscollege.nl</p>
-                <p class="smalltext">copyright A.P. Cammeraat 2016</p>
+                <p>112983@emmauscollege.nl</p>
+                <p class="smalltext">George Zuurendonk</p>
                 <br>
             </footer>
         
