--- a/spelers.html
+++ b/spelers.html
@@ -15,11 +15,11 @@
             
             <nav>
                 <ul>
-                    <li><a class="active" href="index.html">Wat is Esport nou precies?</a></li>
+                    <li><a href="index.html">Wat is Esport nou precies?</a></li>
                     <li><a href="overmij.html">Ik als Esporter!</a></li>
                     <li><a href="info.html">Extra Informatie</a></li>
                     <li><a href="team.html">Mijn Team </a></li>
-                    <li><a href="spelers.html"> Bekende Esporters</a></li>
+                    <li><a class="active" href ="spelers.html"> Bekende Esporters</a></li>
                 </ul>
             </nav>
             
