Les vrijdag 19 nov

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <head>
         <link rel="stylesheet" href="style.css">
         <title>Dit is  de website van George</title>
+        <meta charset ="utf-8">
     </head>
     
     <body>
@@ -26,7 +27,9 @@
             <article>
                 <p><img class="zweefLinks" src="afbeeldingen/esport.jpg">
                 <a href=""> </a> De term esports is een samenvoeging van de woorden electronic en sports. De meest gangbare definitie is het competitief spelen van multiplayer-videogames op professioneel niveau. Dit kan, afhankelijk van de titel, op een PC, console of zelfs een tablet of mobiele telefoon..</p>
-                <p>  </p>
+                <p>Esporters trainen gemiddeld 30 uur per week om hun vaardigheden te perfectioneren, en nemen dat (terecht!) heel serieus. In zekere zin zijn esports dan ook een vorm van topsport.</p>
+                <p>Voor sommige toernooien  worden hele voetbalstadions  afgehuurd. Het heeft ook wel wat weg van een WK voetbal: het grootste esports-evenement ooit ging door in Polen en lokte 173.000 bezoekers, met nog eens 46 miljoen online kijkers.</p>
+                <p>De esports-community blijft groeien, waardoor sommige bedrijven de competities zien als een opportuniteit om reclame te maken. De beste spelers laten zich dan ook sponsoren door merken als Redbull, Nike en Puma.</p>
             </article>
         
             <footer>
