Les vrijdag 19 nov 2

--- a/overmij.html
+++ b/overmij.html
@@ -19,7 +19,7 @@
                 <ul>
                     <li><a href="index.html">Wat is Esport nou precies?</a></li>
                     <li><a class="active" href="overmij.html">Ik als Esporter! </a></li>
-                    <li><a href="info.html">Extra Informatie</a></li>
+                    <li><a href="info.html">Rocket League </a></li>
                     <li><a href="team.html">Mijn Team </a></li>
                     <li><a href ="spelers.html"> Bekende Esporters</a></li>
                 </ul>
