--- a/team.html
+++ b/team.html
@@ -17,7 +17,7 @@
                 <ul>
                     <li><a href="index.html">Wat is Esport nou precies?</a></li>
                     <li><a href="overmij.html">Ik als Esporter!</a></li>
-                    <li><a href="info.html">Extra Informatie</a></li>
+                    <li><a href="info.html">Rocket League </a></li>
                     <li><a class="active"href="team.html"> Mijn Team </a></li>
                     <li><a href ="spelers.html"> Bekende Esporters</a></li>
                 </ul>
