--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li><a class="active" href="index.html">Wat is Esport nou precies?</a></li>
                     <li><a href="overmij.html">Ik als Esporter!</a></li>
-                    <li><a href="info.html">Extra Informatie</a></li>
+                    <li><a href="info.html">Rocket League </a></li>
                     <li><a href="team.html">Mijn Team </a></li>
                     <li><a href="spelers.html"> Bekende Esporters</a></li>
                 </ul>
