--- a/index.html
+++ b/index.html
@@ -32,6 +32,8 @@
                 <p><img class="zweefrechts" src="afbeeldingen/esportsv2.jpeg">
                 <p>Voor sommige toernooien  worden hele voetbalstadions  afgehuurd. Het heeft ook wel wat weg van een WK voetbal: het grootste esports-evenement ooit ging door in Polen en lokte 173.000 bezoekers, met nog eens 46 miljoen online kijkers.</p>
                 <p>De esports-community blijft groeien, waardoor sommige bedrijven de competities zien als een opportuniteit om reclame te maken. De beste spelers laten zich dan ook sponsoren door merken als Redbull, Nike en Puma.</p>
+                <p> Tegenwoordig zijn de eSports zeer groot, zelfs uitgegroeid tot een miljardenbusiness. Electronic Sports zijn voornamelijk populair in Azië en de Verenigde Staten. Maar ook in Nederland komt er steeds meer aandacht voor deze sporttak. Hieronder geven wij een korte uitleg over de vier bekendste genres binnen de eSport en vertellen wij meer over de geschiedenis van de eSports.</p>
+            
             </article>
         
             <footer>
