--- a/overmij.html
+++ b/overmij.html
@@ -28,7 +28,7 @@
             
             <article>
                 <p>Ik ben zelf momenteel een Professionele Esporter voor VVV-Venlo. Ik speel het spel Rocket League en sta 3rde van heel nederland. Ik doe ook vaak mee met grootte tournementen waarmee ik geld kan verdienen. Dit doe ik naturlijk niet alleen, maar met mijn team waar ik later meer over ga vertellen.</p>
-                <p></p>
+                <p><p><img class="vvvlogo" src="afbeeldingen/vvvlogo.jpeg"></p>
                 <p></p>
             </article>
         
